<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="430dp"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/cardView_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/card_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:text="@string/benjie" />
        <ImageView
            android:id="@+id/final_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/card_user"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/descript" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/post_descript"
        android:layout_below="@+id/final_image"
        android:layout_alignStart="@+id/final_image"
            android:hint="@string/feed_post_title"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/post_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_descript"
            android:layout_alignStart="@+id/final_image"
            android:gravity="start"
            android:hint="@string/feed_post_content"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>