<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context="com.example.chiwaya.schbar.Login">


    <EditText
        android:id="@+id/user_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawableLeft="@mipmap/ic_launcher_login"
        android:ems="10"
        android:hint="@string/login"
        android:visibility="invisible"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/user_passcode"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/user_login"
        android:layout_alignStart="@+id/user_login"
        android:layout_below="@+id/user_login"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password"
        android:visibility="invisible"
        android:drawableLeft="@mipmap/ic_launcher_passcode"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:visibility="invisible"
        android:layout_toEndOf="@+id/login_button"
        android:layout_toRightOf="@+id/login_button"
        android:clickable="true"
        android:onClick="register_Account"
        android:text="@string/register"
        android:textColor="#74d14c"
        android:textColorHighlight="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_passcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="Login_Account"
        android:visibility="invisible"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="199dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/searchbar" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:visibility="invisible"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/text_register"
        android:text="@string/stay_signed"
        android:textColor="#74d14c"/>
</RelativeLayout>
