<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient2"
        tools:context=".Details"
        android:paddingTop="1dp">
        <android.support.v7.widget.CardView xmlns:http="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView_parent_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:padding="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="527dp"
                android:layout_margin="2dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/benjie"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/final_image2"
                    android:layout_width="347dp"
                    android:layout_height="305dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/user_2"
                    android:layout_marginStart="7dp"
                    android:contentDescription="@string/descript"
                    android:transitionName="SharedImage" />
                <TextView
                    android:id="@+id/post_descript_2"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_above="@+id/post_notes_2"
                    android:layout_alignRight="@+id/final_image2"
                    android:layout_alignStart="@+id/final_image2"
                    android:layout_below="@+id/final_image2"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/feed_post_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/post_notes_2"
                    android:layout_width="330dp"
                    android:layout_height="158dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@+id/final_image2"
                    android:layout_alignStart="@+id/final_image2"
                    android:layout_marginBottom="10dp"
                    android:nestedScrollingEnabled="true"
                    android:gravity="start"
                    android:hint="@string/feed_post_content" />


            </RelativeLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|start"
                android:layout_alignStart="@+id/final_image2"
                android:elevation="20dp"
                android:layout_margin="15dp"
                android:text="@string/chat"
                android:onClick="openChats"
                android:textSize="12sp" />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:elevation="10dp"
                android:onClick="Publish"
                android:src="@drawable/ic_action_add"
                android:transitionName="action_button" />
        </android.support.v7.widget.CardView>
    </LinearLayout>