<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chiwaya.schbar.Post"
    android:background="@drawable/gradient2">

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="223dp"
        android:layout_height="198dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:contentDescription=" "
        android:cropToPadding="false"
        android:onClick="addNewPhoto"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="9dp" />

    <Button
        android:id="@+id/photoAdd"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/postButton"
        android:onClick="createNew_Posting"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/captionText"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@+id/captionTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/custom_shapes"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/Notes"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textDirection="inherit"
        android:typeface="sans"
        android:visibility="visible"
        android:layout_gravity="start" />

    <EditText
        android:id="@+id/captionTitle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/captionText"
        android:layout_alignStart="@+id/captionText"
        android:layout_below="@+id/postImage"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_shapes"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/Caption"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

</RelativeLayout>
